Sat Jun  4 10:54:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/crypt.h (struct crypt_data): remove unnecessary member
	  "initialized".

	* missing/crypt.c (des_setkey_r): nothing to be initialized in
	  crypt_data.

	* configure.in (struct crypt_data): check for "initialized" in
	  struct crypt_data, which may be only in glibc, and isn't on AIX
	  at least.

Sat Jun  4 10:38:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c: unify MAX_PATH, _MAX_PATH, and MAXPATHLEN to
	  PATH_MAX, except for MAX_PATH in get_special_folder for an API
	  limit.

Fri Jun  3 21:27:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): rb_str_conv_enc() never set encoding
	  of the source string, but returns the string itself if the
	  conversion failed.  then the instance variable does not need to
	  be set again.

Fri Jun  3 18:04:37 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): need to duplicate path before passing it to
	  rb_str_conv_enc() because the function might call rb_enc_associate()
	  internally.  this fixes test failures on Windows introduced at r55260.

Fri Jun  3 17:44:25 2016  Reiner Herrmann  <reiner@reiner-h.de>

	* lib/mkmf.rb (create_makefile): sort lists of source and object
	  files in generated Makefile, unless given by extconf.rb.
	  [Fix GH-1367]

Thu Jun  2 21:18:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (get_special_folder): use SHGetPathFromIDListEx if
	  available instead of old SHGetPathFromIDListW, to check the
	  buffer size.

Thu Jun  2 17:05:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): remove MAXPATHLEN restriction
	  for Windows 10.

Thu Jun  2 16:51:35 2016  Koichi ITO  <koic.ito@gmail.com>

	* misc/ruby-mode.el (ruby-here-doc-beg-re),
	  (ruby-here-doc-beg-match, ruby-parse-partial): Support for
	  `squiggly heredoc' syntax in ruby-mode.  [Fix GH-1372]
